# elosys

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  codecov.yml  lerna.json  package-lock.json  package.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  PROPOSAL.yml  config.yml
.github/workflows/: build-ironfish-rust-nodejs.yml  ci.yml  deploy-brew.yml  deploy-node-docker-image.yml  deploy-npm-ironfish-cli.yml  deploy-npm-ironfish-rust-nodejs.yml  deploy-npm-ironfish.yml  perf_test.yml  publish-binaries.yml  push-version-to-api.yml  rust_ci.yml  rust_ci_cache.yml
benchmarks/: Cargo.toml
benchmarks/benches/: asset.rs  merkle_note.rs  sapling_key.rs  transaction.rs
config/eslint-config-elosys/: index.js  package.json
config/eslint-plugin-ironfish/: package.json
elosys/: .prettierrc.js  jest.setup.env.js  package.json
elosys-cli/: .eslintrc.js  Dockerfile  README.md  STYLE_GUIDE.md  tsconfig.test.json
elosys-mpc/: Cargo.toml
elosys-mpc/src/: compute.rs  verify_transform.rs
elosys-phase2/: Cargo.toml
elosys-rust/: Cargo.toml  build.rs
elosys-rust-nodejs/: index.js  package.json
elosys-zkp/: LICENSE-MIT  README.md
ironfish/: .eslintrc.js  README.md  package.json
ironfish-cli/: STYLE_GUIDE.md  package.json  tsconfig.json
ironfish-mpc/: README.md
ironfish-phase2/: README.md
ironfish-rust/: README.md
ironfish-rust-nodejs/: Cargo.toml  README.md
ironfish-zkp/: Cargo.toml
mainnet-parameters/: README.md
tools/: reset-network-genesis.sh  version-bump.js
(+325 files in other folders)
