[workspace]
resolver = "2"

members = [
    "benchmarks",
    "elosys-mpc",
    "elosys-phase2",
    "elosys-rust",
    "elosys-rust-nodejs",
    "elosys-zkp",
]

[workspace.package]
authors = ["Elosys <contact@elosys.network> (https://elosys.network)"]
edition = "2021"
homepage = "https://elosys.network/"
repository = "https://github.com/elosys/elosys"

[patch.crates-io]
bellman = { git = "https://github.com/elosys/bellman", rev = "1cc52ca33e6db14233f1cbc0c9c5b7c822b229ec" }

[profile.release]
debug = true