[package]
name = "elosys_mpc"
version = "0.2.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>", "Iron Fish <contact@elosys.network> (https://elosys.network)"]

publish = false

[package.edition]
workspace = true

[[bin]]
name = "new"
required-features = ["verification"]

[[bin]]
name = "compute"

[[bin]]
name = "verify"
required-features = ["verification"]

[[bin]]
name = "verify_transform"
required-features = ["verification"]

[[bin]]
name = "beacon"
required-features = ["beacon"]

[[bin]]
name = "split_params"

[dependencies]
elosys-phase2 = { path = "../elosys-phase2" }
pairing = "0.23"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_seeder = "0.2.3"
blake2 = "0.10.6"

[dependencies.elosys_zkp]
path = "../elosys-zkp"
optional = true

[dependencies.byteorder]
version = "1.5"
optional = true

[dependencies.hex-literal]
version = "0.1"
optional = true

[features]
verification = ["elosys_zkp"]
beacon = ["byteorder"]
